--- a/main.ipynb
+++ b/main.ipynb
@@ -2,61 +2,153 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 584 items from JSON.\n",
+      "Extracted 555 texts and 194 images.\n",
+      "Computed embeddings shape: (555, 384)\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Coding\\VSCode\\chatbot\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "Device set to use cpu\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Models loaded successfully.\n",
+      "FAISS index size: 555\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "import json\n",
     "import os\n",
-    "import faiss\n",
     "import numpy as np\n",
-    "from sentence_transformers import SentenceTransformer\n",
+    "import faiss\n",
+    "from sentence_transformers import SentenceTransformer, CrossEncoder\n",
+    "from transformers import pipeline\n",
     "\n",
-    "# Paths to files\n",
-    "json_file_path = r\"C:/Coding/VSCode/chatbot/output/abus_elektro-seilzug_programm/auto/abus_elektro-seilzug_programm_content_list.json\"\n",
-    "images_base_dir = r\"C:/Coding/VSCode/chatbot/output/abus_elektro-seilzug_programm/auto\"\n",
+    "CONTENT_LIST_PATHS = [\n",
+    "    \"C:/Coding/VSCode/chatbot/output/abus_elektro-seilzug_programm/auto/abus_elektro-seilzug_programm_content_list.json\",\n",
+    "    \"C:/Coding/VSCode/chatbot/output/abus_hb-system_programm/auto/abus_hb-system_programm_content_list.json\",\n",
+    "    \"C:/Coding/VSCode/chatbot/output/abus_laufkran_programm/auto/abus_laufkran_programm_content_list.json\"\n",
+    "]\n",
+    "IMAGES_BASE_DIRS = [\n",
+    "    \"C:/Coding/VSCode/chatbot/output/abus_elektro-seilzug_programm/auto/images\",\n",
+    "    \"C:/Coding/VSCode/chatbot/output/abus_hb-system_programm/auto/images\",\n",
+    "    \"C:/Coding/VSCode/chatbot/output/abus_laufkran_programm/auto/images\"\n",
+    "]\n",
     "\n",
-    "# Load JSON content\n",
-    "with open(json_file_path, \"r\", encoding=\"utf-8\") as f:\n",
-    "    content_list = json.load(f)\n",
+    "# Function to load JSON content from the given paths\n",
+    "def load_content(paths):\n",
+    "    \"\"\"Load JSON content from the given paths.\"\"\"\n",
+    "    content = []\n",
+    "    for path in paths:\n",
+    "        try:\n",
+    "            with open(path, \"r\", encoding=\"utf-8\") as file:\n",
+    "                content.extend(json.load(file))\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error loading {path}: {e}\")\n",
+    "    return content\n",
     "\n",
-    "# Prepare data for embedding and store associated page indices and image paths\n",
-    "texts = []\n",
-    "page_indexes = []\n",
-    "image_paths = []\n",
+    "# Function to extract texts, page indexes, and image paths from the content list\n",
+    "def extract_content(content_list, image_dirs):\n",
+    "    \"\"\"Extract texts, page indexes, and image paths from the content list.\"\"\"\n",
+    "    texts, page_indexes, image_paths = [], [], []\n",
+    "    image_dir_mapping = {os.path.basename(dir): dir for dir in image_dirs}\n",
     "\n",
-    "for item in content_list:\n",
-    "    if item[\"type\"] == \"text\" and item[\"text\"].strip():\n",
-    "        texts.append(item[\"text\"].strip())\n",
-    "        page_indexes.append(item.get(\"page_idx\"))\n",
-    "        image_paths.append(None)\n",
-    "    elif item[\"type\"] == \"image\":\n",
-    "        caption = \" \".join(item.get(\"img_caption\", [])).strip() or \"No caption available\"\n",
-    "        texts.append(caption)\n",
-    "        page_indexes.append(item.get(\"page_idx\"))\n",
-    "        # Correctly join the base directory and image path, then normalize it\n",
-    "        image_path = os.path.normpath(os.path.join(images_base_dir, item[\"img_path\"]))\n",
-    "        image_paths.append(image_path)\n",
+    "    for item in content_list:\n",
+    "        if item[\"type\"] == \"text\" and item[\"text\"].strip():\n",
+    "            texts.append(item[\"text\"].strip())\n",
+    "            image_paths.append(None)\n",
+    "        elif item[\"type\"] == \"image\":\n",
+    "            caption = \" \".join(item.get(\"img_caption\", [])).strip() or \"No caption available\"\n",
+    "            texts.append(caption)\n",
+    "            img_dir = os.path.dirname(item[\"img_path\"])\n",
+    "            base_dir = image_dir_mapping.get(os.path.basename(img_dir), image_dirs[0])\n",
+    "            image_paths.append(os.path.normpath(os.path.join(base_dir, item[\"img_path\"])))\n",
+    "    return texts, image_paths\n",
     "\n",
-    "# Initialize embedding model\n",
-    "model = SentenceTransformer(\"all-MiniLM-L6-v2\")\n",
+    "# Function to initialize and return a FAISS index with the given embeddings\n",
+    "def initialize_faiss_index(embeddings):\n",
+    "    \"\"\"Initialize and return a FAISS index with the given embeddings.\"\"\"\n",
+    "    embedding_dim = embeddings.shape[1]\n",
+    "    index = faiss.IndexFlatIP(embedding_dim)\n",
+    "    index.add(embeddings)\n",
+    "    return index\n",
     "\n",
-    "# Compute embeddings\n",
-    "embeddings = model.encode(texts, convert_to_numpy=True)\n",
+    "# Function to search for the query and return an answer or relevant context\n",
+    "def search_and_answer(query, k=5, confidence_threshold=0.01):\n",
+    "    \"\"\"You are a Helper in a Crane Company, deeply knowledgeable about crane systems. \n",
+    "    Your task is to assist employees and stakeholders by providing accurate and helpful information based on the given context. \n",
+    "    Use your expertise to explain, elaborate, and offer actionable insights to address their queries effectively.\"\"\"\n",
+    "    print(\"-\" * 50)\n",
+    "    print(f\"\\nSearching for: {query}, retrieving top {k * 2} results\")\n",
+    "    \n",
+    "    # Encode the query and search the FAISS index\n",
+    "    query_embedding = embedding_model.encode([query], convert_to_numpy=True, normalize_embeddings=True)\n",
+    "    distances, indices = index.search(query_embedding, k * 2)\n",
+    "    \n",
+    "    # Retrieve texts\n",
+    "    retrieved_texts = [texts[idx] for idx in indices[0] if idx < len(texts)]\n",
+    "    \n",
+    "    # Rank texts using the reranker\n",
+    "    pairs = [[query, text] for text in retrieved_texts]\n",
+    "    scores = reranker.predict(pairs)\n",
+    "    sorted_texts = [text for _, text in sorted(zip(scores, retrieved_texts), reverse=True)[:k]]\n",
+    "    context = \" \".join(sorted_texts)\n",
     "\n",
-    "# Create and populate FAISS index\n",
-    "embedding_dim = embeddings.shape[1]\n",
-    "index = faiss.IndexFlatL2(embedding_dim)\n",
-    "index.add(embeddings)"
+    "    # Print retrieved and ranked texts for debugging\n",
+    "    print(\"\\nRetrieved texts:\")\n",
+    "    for text in retrieved_texts:\n",
+    "        print(f\"- {text}\")\n",
+    "    print(\"\\nRanked texts:\")\n",
+    "    for text in sorted_texts:\n",
+    "        print(f\"- {text}\")\n",
+    "    print(f\"\\nUsing context: {context}\\n\")\n",
+    "    print(\"-\" * 50)\n",
+    "    print(f\"\\nQuery: {query}\")\n",
+    "\n",
+    "    # Get the answer from the QA model\n",
+    "    result = qa_model(question=query, context=context)\n",
+    "    if result.get('score', 0) < confidence_threshold:\n",
+    "        print(\"Model is unsure about the answer. Returning context instead.\")\n",
+    "        return context\n",
+    "    else:\n",
+    "        print(f\"Answer: {result['answer']}\")\n",
+    "        return result['answer']\n",
+    "    \n",
+    "# Load content\n",
+    "content_list = load_content(CONTENT_LIST_PATHS)\n",
+    "print(f\"Loaded {len(content_list)} items from JSON.\")\n",
+    "\n",
+    "# Extract texts and image paths\n",
+    "texts, image_paths = extract_content(content_list, IMAGES_BASE_DIRS)\n",
+    "print(f\"Extracted {len(texts)} texts and {len([p for p in image_paths if p])} images.\")\n",
+    "\n",
+    "# Initialize models\n",
+    "embedding_model = SentenceTransformer(\"sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2\")\n",
+    "embeddings = embedding_model.encode(texts, convert_to_numpy=True, normalize_embeddings=True)\n",
+    "print(f\"Computed embeddings shape: {embeddings.shape}\")\n",
+    "\n",
+    "reranker = CrossEncoder(\"cross-encoder/ms-marco-MiniLM-L-6-v2\")\n",
+    "qa_model = pipeline(\"question-answering\", model=\"deepset/gelectra-base-germanquad\")\n",
+    "print(\"Models loaded successfully.\")\n",
+    "\n",
+    "# Initialize FAISS index\n",
+    "index = initialize_faiss_index(embeddings)\n",
+    "print(f\"FAISS index size: {index.ntotal}\\n\")"
    ]
   },
   {
@@ -68,102 +160,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Top 5 results for the query: 'Schnellsteckverbindung'\n",
-      "\n",
-      "Result 1:\n",
-      "Page Index: 3\n",
-      "Text: Schnellsteckverbindung\n",
-      "Distance: 0.0000\n",
-      "--------------------------------------------------\n",
-      "Result 2:\n",
-      "Page Index: 3\n",
-      "Text: Durch die bereits vorinstallierten ABUS Schnellsteckverbindungen werden Montage- und Wartungsarbeiten auf ein Minimum beschränkt. Mit wenigen Handgriffen lassen sich elektrische Verbindungen herstellen oder lösen. Ein weiteres Plus: Verwechslungen beim Anschließen sind unmöglich.\n",
-      "Distance: 0.9597\n",
-      "--------------------------------------------------\n",
-      "Result 3:\n",
-      "Page Index: 3\n",
-      "Text: Sicherheitsbremse\n",
-      "Distance: 1.0576\n",
-      "--------------------------------------------------\n",
-      "Result 4:\n",
-      "Page Index: 4\n",
-      "Text: Schrägverzahnte Präzisions-Flachgetriebe in Leichtmetallgehäusen mit einsatzgehärteten Verzahnungen, hochwertiger Oberflächenbehandlung und Lebensdauer- Ölschmierung sorgen für hohe Sicherheit und leisen Lauf bei einem Minimum an Wartungsaufwand.\n",
-      "Distance: 1.0991\n",
-      "--------------------------------------------------\n",
-      "Result 5:\n",
-      "Page Index: 5\n",
-      "Text: Bauart S – Seitenlaufkatze\n",
-      "Distance: 1.1299\n",
       "--------------------------------------------------\n",
       "\n",
-      "Top 5 results for the query: 'ABUCONTROL: HEBT KRANE AUF EIN NEUES LEVEL'\n",
+      "Searching for: Was bieten die Elektromagnet-Zweischeibenbremse?, retrieving top 10 results\n",
       "\n",
-      "Result 1:\n",
-      "Page Index: 9\n",
-      "Text: ABUCONTROL: HEBT KRANE AUF EIN NEUES LEVEL\n",
-      "Distance: 0.0000\n",
+      "Retrieved texts:\n",
+      "- Elektromagnet-Zweischeibenbremsen gewährleisten eine Bremsautomatik bei Netzausfall. Umweltfreundliche Bremsbeläge mit Standzeiten von ca. 1 Mio. Schaltungen sorgen für große Wartungsintervalle.\n",
+      "- Die Elektromagnet-Zweischeibenbremse bietet eine Bremsautomatik bei Netzausfall. Asbestfreie Bremsbeläge mit Standzeiten von ca. 1 Mio. Schaltungen verlängern die Wartungsintervalle.\n",
+      "- Elektro-Kettenzüge und Hochleistungskomponenten\n",
+      "- Motorschutzschalter\n",
+      "- SEILEINSCHERUNG DER ABUS ELEKTRO-SEILZÜGE\n",
+      "- TECHNOLOGIE DER ABUS ELEKTRO-SEILZÜGE\n",
+      "- Stützrollen mit Drehgelenk\n",
+      "- ABUS Elektro-Seilzüge GM\n",
+      "- bietet die Möglichkeit, zwei elektrisch gekoppelte Laufkrane zu steuern. Idealerweise werden hierzu ABUS Funksteuerungen eingesetzt. Dabei können wahlweise zwei Kranführer zwei Krane getrennt bedienen oder aber ein Kranführer beide Krane einzeln und gemeinsam steuern. Beim Transport von Langgut mit 2 Kranen ein echter Gewinn an Sicherheit.\n",
+      "- ABUS verwendet robuste, polschaltbare Zylinderläufermotoren in formschönem Alu-Strangpreßprofil mit integrierter Sicherheitsbremse und wartungsfreundlichem Stecker­ anschluß. Isolationsklasse F, Schutzart IP 55. Optimierte Statorblechschnitte bieten bessere elektrische Ausnutzung bei hoher Laufkultur und thermischer Reserve bei hoher Schalthäufigkeit. Das führt im Vergleich zu konventionellen Motoren zu kleineren Baugrößen. Maschinell hergestellte Wicklungen gewährleisten reproduzierbare Qualität.\n",
+      "\n",
+      "Ranked texts:\n",
+      "- Die Elektromagnet-Zweischeibenbremse bietet eine Bremsautomatik bei Netzausfall. Asbestfreie Bremsbeläge mit Standzeiten von ca. 1 Mio. Schaltungen verlängern die Wartungsintervalle.\n",
+      "- bietet die Möglichkeit, zwei elektrisch gekoppelte Laufkrane zu steuern. Idealerweise werden hierzu ABUS Funksteuerungen eingesetzt. Dabei können wahlweise zwei Kranführer zwei Krane getrennt bedienen oder aber ein Kranführer beide Krane einzeln und gemeinsam steuern. Beim Transport von Langgut mit 2 Kranen ein echter Gewinn an Sicherheit.\n",
+      "- Elektromagnet-Zweischeibenbremsen gewährleisten eine Bremsautomatik bei Netzausfall. Umweltfreundliche Bremsbeläge mit Standzeiten von ca. 1 Mio. Schaltungen sorgen für große Wartungsintervalle.\n",
+      "- ABUS verwendet robuste, polschaltbare Zylinderläufermotoren in formschönem Alu-Strangpreßprofil mit integrierter Sicherheitsbremse und wartungsfreundlichem Stecker­ anschluß. Isolationsklasse F, Schutzart IP 55. Optimierte Statorblechschnitte bieten bessere elektrische Ausnutzung bei hoher Laufkultur und thermischer Reserve bei hoher Schalthäufigkeit. Das führt im Vergleich zu konventionellen Motoren zu kleineren Baugrößen. Maschinell hergestellte Wicklungen gewährleisten reproduzierbare Qualität.\n",
+      "- Elektro-Kettenzüge und Hochleistungskomponenten\n",
+      "\n",
+      "Using context: Die Elektromagnet-Zweischeibenbremse bietet eine Bremsautomatik bei Netzausfall. Asbestfreie Bremsbeläge mit Standzeiten von ca. 1 Mio. Schaltungen verlängern die Wartungsintervalle. bietet die Möglichkeit, zwei elektrisch gekoppelte Laufkrane zu steuern. Idealerweise werden hierzu ABUS Funksteuerungen eingesetzt. Dabei können wahlweise zwei Kranführer zwei Krane getrennt bedienen oder aber ein Kranführer beide Krane einzeln und gemeinsam steuern. Beim Transport von Langgut mit 2 Kranen ein echter Gewinn an Sicherheit. Elektromagnet-Zweischeibenbremsen gewährleisten eine Bremsautomatik bei Netzausfall. Umweltfreundliche Bremsbeläge mit Standzeiten von ca. 1 Mio. Schaltungen sorgen für große Wartungsintervalle. ABUS verwendet robuste, polschaltbare Zylinderläufermotoren in formschönem Alu-Strangpreßprofil mit integrierter Sicherheitsbremse und wartungsfreundlichem Stecker­ anschluß. Isolationsklasse F, Schutzart IP 55. Optimierte Statorblechschnitte bieten bessere elektrische Ausnutzung bei hoher Laufkultur und thermischer Reserve bei hoher Schalthäufigkeit. Das führt im Vergleich zu konventionellen Motoren zu kleineren Baugrößen. Maschinell hergestellte Wicklungen gewährleisten reproduzierbare Qualität. Elektro-Kettenzüge und Hochleistungskomponenten\n",
+      "\n",
       "--------------------------------------------------\n",
-      "Result 2:\n",
-      "Page Index: 9\n",
-      "Text: ABUControl setzt auf bewährte, am freien Markt erhältliche Bauteile von namhaften Elektronikherstellern. Ein Austausch oder Reparatur bedingt weder „Herrschaftswissen“ noch „Softwarelizenzen“. Sie behalten zu jeder Zeit die vollständige Kontrolle über den Kran und die freie Wahl des Servicepartners. ABUControl - ein einzigartiges Versprechen für einfache Wartung und Reparatur.\n",
-      "Distance: 0.8290\n",
-      "--------------------------------------------------\n",
-      "Result 3:\n",
-      "Page Index: 8\n",
-      "Text: Der ABULiner\n",
-      "Distance: 0.9004\n",
-      "--------------------------------------------------\n",
-      "Result 4:\n",
-      "Page Index: 9\n",
-      "Text: ABUS Krane mit ABUControl-Steuerung können über Fahrprofile auf Ihre Gegebenheiten angepasst werden. Krane mit zwei festen Geschwindigkeiten fahren z.B. völlig anders als frequenzumrichtergesteuerte Krane. Fahr- und Hubprofile ermöglichen die Anpassung der Krane an Ihre aktuelle bzw. gewünschte Situation. Damit entfällt bei vorhandenen Kranen der Umstellungsaufwand Ihrer Kranfahrer und sie spüren eher die gestiegene Produktivität durch die zusätzliche Krananlage.\n",
-      "Distance: 0.9175\n",
-      "--------------------------------------------------\n",
-      "Result 5:\n",
-      "Page Index: 11\n",
-      "Text: ABUS hat sich spezialisiert auf flurfreie Hebe- und Fördertechnik bis 120 t – ganz bewusst. Nicht nur, weil sich in diesem Lastenbereich die absolute Mehrheit aller Anwendungsfälle abspielt, sondern auch, um die Potenziale Ihrer Rationalisierung so wirkungs­voll wie möglich erschließen zu können. ABUS bietet ein umfassendes Programm rationeller und sofort verfügbarer Fördertechnik: Lauf­krane, Schwenkkrane, Hängebahnsysteme (HB-System), Leichtportal­krane, Einschienen-Katzbahnen, Elektro-Seilzüge, Elektro-Kettenzüge und eine Vielfalt von Komponenten.\n",
-      "Distance: 0.9327\n",
-      "--------------------------------------------------\n"
+      "\n",
+      "Query: Was bieten die Elektromagnet-Zweischeibenbremse?\n",
+      "Answer: eine Bremsautomatik bei Netzausfall\n"
      ]
     }
    ],
    "source": [
-    "def search(query, top_k=5):\n",
-    "    # Encode the query to generate embedding\n",
-    "    query_embedding = model.encode([query]).astype(\"float32\")\n",
-    "\n",
-    "    # Search in the FAISS index\n",
-    "    distances, indices = index.search(query_embedding, top_k)\n",
-    "\n",
-    "    # Collect relevant page indices\n",
-    "    relevant_pages = set()\n",
-    "    for idx in indices[0]:\n",
-    "        if idx < len(page_indexes):\n",
-    "            relevant_pages.add(page_indexes[idx])\n",
-    "\n",
-    "    # Display the results\n",
-    "    print(f\"\\nTop {top_k} results for the query: '{query}'\\n\")\n",
-    "    if relevant_pages:\n",
-    "        for i, idx in enumerate(indices[0]):\n",
-    "            if idx < len(texts):\n",
-    "                page_idx = page_indexes[idx]\n",
-    "                text = texts[idx]\n",
-    "                image_path = image_paths[idx]\n",
-    "                print(f\"Result {i + 1}:\")\n",
-    "                print(f\"Page Index: {page_idx}\")\n",
-    "                if image_path:\n",
-    "                    print(f\"Image Path: {image_path}\")\n",
-    "                    print(f\"Caption: {text}\")\n",
-    "                else:\n",
-    "                    print(f\"Text: {text}\")\n",
-    "                print(f\"Distance: {distances[0][i]:.4f}\")\n",
-    "                print(\"-\" * 50)\n",
-    "    else:\n",
-    "        print(\"No relevant context found for the query.\")\n",
-    "\n",
-    "# Example query\n",
-    "search(\"Schnellsteckverbindung\")\n",
-    "search(\"ABUCONTROL: HEBT KRANE AUF EIN NEUES LEVEL\")"
+    "# Example usage\n",
+    "query = \"Was bieten die Elektromagnet-Zweischeibenbremse?\"\n",
+    "result = search_and_answer(query)"
    ]
   }
  ],
